# razgon-drf

./: .gitignore  .pre-commit-config.yaml  Makefile  WEB_INTERFACE_GUIDE.md  pyproject.toml  ruff.toml
authentication/: html_views.py  serializers.py  urls.py  views.py
cars/: urls.py  views.py
core/: settings.py  urls.py
guides/: API_USAGE.md  HTMX_API_ARCHITECTURE.md
templates/auth/: api_login.html  api_register.html  login.html  register.html
templates/base/: api_base.html  base.html
templates/dashboard/: api_dashboard.html  dashboard.html  profile_edit.html
